changed background colour

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ h2 {text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size
      
 h3{text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size: x-large;}
      
-h4 {text-align: center;font-family: "Sans-Serif"; background-color: #87CEEB;} 
+h4 {text-align: center;font-family: "Sans-Serif";} 
      
 h6{text-align: center;font-family: "Sans-Serif";}
     
