--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 h1 {text-align: center; font-family: "Sans-Serif"; font-weight: bolder;}
 head{background-color: #3C7EC9;}
 
-h2 {text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size:xx-large;}  
+h2 {text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size:40px;}  
      
-h3{text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size: x-large;}
+h3{text-align: center;font-family: "Sans-Serif"; font-weight: bolder; font-size:25px;}
      
 h4 {text-align: center;font-family: "Sans-Serif";} 
      
 h6{text-align: center;font-family: "Sans-Serif";}
     
-p{text-align:center;font-family: "Sans-Serif";}
+p{text-align:center;font-family: "Sans-Serif"; font-size: 15px;}
     /* Set additional styling options for the columns */
     
     .column {
